--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Xam.Plugins.Settings" version="2.5.4" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Vibrate" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Core.UI" version="25.1.1" targetFramework="monoandroid71" />
@@ -16,6 +17,6 @@
   <package id="Xamarin.Android.Support.v7.Palette" version="25.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.1.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.Build.Download" version="0.4.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Build.Download" version="0.4.3" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.4.224" targetFramework="monoandroid71" />
 </packages>
